# ChangeLog for kde-base/kdebase
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.286 2006/06/14 18:23:59 carlo Exp $

*kdebase-3.5.2-r2 (14 Jun 2006)
*kdebase-3.4.3-r2 (14 Jun 2006)

  14 Jun 2006; Carsten Lohrke <carlo@gentoo.org> +kdebase-3.4.3-r2.ebuild,
  +kdebase-3.5.2-r2.ebuild:
  Fix KDM symlink attack vulnerability, bug #136201.

  11 Jun 2006; Carsten Lohrke <carlo@gentoo.org> kdebase-3.5.2-r1.ebuild:
  Restore keywords.

  11 Jun 2006; Carsten Lohrke <carlo@gentoo.org> kdebase-3.5.2-r1.ebuild,
  kdebase-3.5.3.ebuild:
  Adjust ebuilds to kde_src_unpack() patch handling changes.

  03 Jun 2006; Guy Martin <gmsoft@gentoo.org> kdebase-3.5.2-r1.ebuild:
  Stable on hppa.

*kdebase-3.5.3 (02 Jun 2006)

  02 Jun 2006; Stefan Schweizer <genstef@gentoo.org> +kdebase-3.5.3.ebuild:
  version bump

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> kdebase-3.5.2-r1.ebuild:
  Stable on alpha wrt Bug #132213.

  30 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  kdebase-3.5.2-r1.ebuild:
  Stable on amd64 wrt bug #132213

  30 May 2006; Joseph Jezak <josejx@gentoo.org> kdebase-3.5.2-r1.ebuild:
  Marked ppc stable for bug #132213.

  29 May 2006; Jason Wever <weeve@gentoo.org> kdebase-3.5.2-r1.ebuild:
  Stable on SPARC wrt bug #132213.

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kdebase-3.4.1-r1.ebuild, -kdebase-3.4.2.ebuild, -kdebase-3.4.2-r1.ebuild,
  -kdebase-3.4.2-r2.ebuild, -kdebase-3.4.3.ebuild, -kdebase-3.5.2.ebuild:
  Drop old versions.

  26 May 2006; Markus Rothe <corsair@gentoo.org> kdebase-3.5.2-r1.ebuild:
  Stable on ppc64

  26 May 2006; Joshua Jackson <tsunam@gentoo.org> kdebase-3.5.2-r1.ebuild:
  x86 stable for KDE 3.5

  14 May 2006; <psi29a@gentoo.org> kdebase-3.5.2-r1.ebuild:
  added to ~mips for testing

  10 May 2006; Caleb Tennis <caleb@gentoo.org>
  +files/kwin-3.5.2-parallel-make.diff, kdebase-3.5.2-r1.ebuild: