@@ -1,0 +1,6 @@
+MD5 71b9ee636bc39514d3d445b7034b7aa7 kdebase-3.5-patchset-02.tar.bz2 7118
+RMD160 ea3c7215e68754e8acac03e9fafea8aa9c6d1202 kdebase-3.5-patchset-02.tar.bz2 7118
+SHA256 459e2ce09a7151fd5f52bf77570dccd2447f00a604dab65adf7dfb5da431ac1b kdebase-3.5-patchset-02.tar.bz2 7118
+MD5 9cb6b8291c4f3f986e16f72129e8fcd0 kdebase-3.5.3.tar.bz2 23634194
+RMD160 ef55c72b97577dd86e5c64bf589ff9b2d556ec07 kdebase-3.5.3.tar.bz2 23634194
+SHA256 5a2b9bc5e2682684519dbae89b3bd73fbf5de1f1effd3ca072173a9638dc3ff8 kdebase-3.5.3.tar.bz2 23634194
