@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.286 2006/06/14 18:23:59 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.287 2006/06/14 18:40:50 carlo Exp $
+
+*kdebase-3.5.3-r1 (14 Jun 2006)
+
+  14 Jun 2006; Carsten Lohrke <carlo@gentoo.org> +kdebase-3.5.3-r1.ebuild:
+  Fix KDM symlink attack vulnerability, bug #136201. Missing return value
+  checks. KDE 3.5 brach fixes for KControl, Kicker and Konsole.
 
 *kdebase-3.5.2-r2 (14 Jun 2006)
 *kdebase-3.4.3-r2 (14 Jun 2006)
